# OpenGL_App_Without_Lib

./: CMakeLists.txt  README.md
assets/shaders/: flat_shader.frag.glsl  flat_shader.vert.glsl
scripts/: build.bat
src/: app.cpp  glcore.cpp  glcore.h  platform.h
src/GL/: glcorearb.h  wglext.h
